<resources>
    <string name="app_name">HabitTrackerRPG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_prompt">Don\'t have an account? <b>Register</b></string>
    <string name="username_hint">Username</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_button_text">Register</string>
    <string name="error_invalid_credentials">Invalid email or password.</string>
    <string name="error_unverified_account">Please verify your account before logging in.</string>
    <string name="error_empty_fields">Email and password are required.</string>
    <string name="login_title">Welcome to HabitQuest</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="profile_level">Level: </string>
    <string name="profile_xp">XP: </string>
    <string name="profile_pp">PP: </string>
    <string name="profile_coins">Coins: </string>
    <string name="profile_title">Title</string>
    <string name="profile_badges">Badges: </string>
    <string name="profile_equipment">Equipment: </string>
    <string name="profile_logout">Logout</string>
    <string name="badges_placeholder">Badges: Not implemented</string>
    <string name="equipment_placeholder">Equipment: Not implemented</string>
    <string name="level_text">Level: %1$d</string>
    <string name="xp_text">XP: %1$d</string>
    <string name="pp_text">PP: %1$d</string>
    <string name="coins_text">Coins: %1$d</string>
    <string name="badges_text">Badges: %1$s</string>
    <string name="equipment_text">Equipment: %1$s</string>
    <string name="logout_button_text">Logout</string>
    <string name="placeholder_username">Username</string>
    <string name="placeholder_title">Title</string>
    <string name="task_name_hint">Task Name</string>
    <string name="task_description_hint">Description (optional)</string>
    <string name="category_label">Category</string>
    <string name="difficulty_label">Difficulty</string>
    <string name="difficulty_very_easy">Very Easy (1 XP)</string>
    <string name="difficulty_easy">Easy (3 XP)</string>
    <string name="difficulty_hard">Hard (7 XP)</string>
    <string name="difficulty_extreme">Extreme (20 XP)</string>
    <string name="importance_label">Importance</string>
    <string name="importance_normal">Normal (1 XP)</string>
    <string name="importance_important">Important (3 XP)</string>
    <string name="importance_extremely_important">Extremely Important (10 XP)</string>
    <string name="importance_special">Special (100 XP)</string>
    <string name="recurring_task_checkbox">Recurring Task</string>
    <string name="recurrence_interval_hint">Recurrence interval (e.g., 2)</string>
    <string name="due_date_button">Set Due Date</string>
    <string name="start_date_button">Set Start Date</string>
    <string name="end_date_button">Set End Date</string>
    <string name="date_not_set">not set</string>
    <string name="save_task">Save Task</string>
    <string-array name="recurrence_units">
        <item>Day(s)</item>
        <item>Week(s)</item>
    </string-array>


</resources>