<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/avatar_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/username_hint"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_avatar" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_username" />

        <LinearLayout
            android:id="@+id/stats_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/text_view_title">

            <TextView
                android:id="@+id/text_view_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/profile_level"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_level" />

            <TextView
                android:id="@+id/text_view_xp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="8dp"
                android:text="@string/profile_xp"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_xp" />

            <TextView
                android:id="@+id/text_view_pp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_pp"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_power"
                android:drawablePadding="8dp"/>

            <TextView
                android:id="@+id/text_view_coins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="8dp"
                android:text="@string/profile_coins"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_coins" />
            <TextView
                android:id="@+id/text_view_badges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_badges"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_badge"
                android:drawablePadding="8dp"/>
            <TextView
                android:id="@+id/text_view_equipment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="My Equipment"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_inventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_inventory_equipment"
                tools:itemCount="3"/>

            <ImageView
                android:id="@+id/image_view_qr_code"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_marginTop="24dp"
                android:contentDescription="QR Code za profil korisnika"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stats_container" />
            <Button
                android:id="@+id/button_my_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="My Friends"
               />
            <Button
                android:id="@+id/button_add_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Friend"
                android:visibility="gone"/>
            <Button
                android:id="@+id/button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/profile_logout" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>