<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    tools:context=".ui.auth.RegisterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose your Avatar"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/avatar_selection_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/avatar1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:src="@drawable/avatar_1"
            android:scaleType="centerCrop"
            android:background="#E91E63"  android:layout_marginBottom="24dp"
            />

        <ImageView
            android:id="@+id/avatar2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:src="@drawable/avatar_2"
            android:scaleType="centerCrop"
            android:background="#E91E63"  android:layout_marginBottom="24dp"
            />

        <ImageView
            android:id="@+id/avatar3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:src="@drawable/avatar_3"
            android:scaleType="centerCrop"
            android:background="#E91E63"  android:layout_marginBottom="24dp"
            />

        <ImageView
            android:id="@+id/avatar4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:src="@drawable/avatar_4"
            android:scaleType="centerCrop"
            android:background="#E91E63"  android:layout_marginBottom="24dp"
           />

        <ImageView
            android:id="@+id/avatar5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:src="@drawable/avatar_5"
            android:scaleType="centerCrop"
            android:background="#E91E63"  android:layout_marginBottom="24dp"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edit_text_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/text_error_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"/>

</LinearLayout>